--- a/restaurant-2/src/sass/components/header.scss
+++ b/restaurant-2/src/sass/components/header.scss
@@ -3,7 +3,7 @@
     flex-flow: wrap;
     justify-content: space-between;
     align-items: center;
-    height: 110px;
+    // height: 110px;
     padding: 20px 0 20px 0;
 }
 
@@ -31,11 +31,60 @@
 .nav__links{
     text-decoration: none;
     text-transform: uppercase;
+    color: #fff;
+    &:hover{
+        color: #dab33e;
+        transition: all .5s linear;
+    }
 }
 
 .header-svg{
     display: block;
     height: 20px;
     width: 20px;
-    fill: black;
+    fill: #dab33e;
+    &:hover{
+        fill: #ffffff;
+        transition: all .5s linear;
+    }
+}
+
+.header-txt-btn{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    padding-top: 97px;
+    padding-bottom: 97px;
+    text-align: center;
+}
+
+.header-title{
+    font-size: 90px;
+    color: #fff;
+    width: 970px;
+    &::after{
+        content: url('../images/header-divider.png');
+        display: block;
+        padding: 0 auto;
+        margin: 0 auto;
+        width: 230px;
+        height: 43px;
+        // margin-bottom: 30px;
+    }
+}
+.header-btn{
+    width: 230px;
+    height: 56px;
+    margin: 30px 0 30px 0;
+    color: #fff;
+    text-transform: uppercase;
+    border: 1px solid #fff;
+    background-color: rgba(255, 255, 255, 0.247);
+    &:hover{
+        border: 1px solid #000;
+        background-color: rgba(0, 0, 0, 0.247);
+        cursor: pointer;
+        transition: all .5s linear;
+    }
 }
