updated and added section 02 - right food

--- a/restaurant-2/src/sass/styles.scss
+++ b/restaurant-2/src/sass/styles.scss
@@ -5,4 +5,5 @@
 @import './helpers/basic';
 @import './helpers/constants';
 @import './helpers/typography';
-@import 'components/header'
+@import 'components/header';
+@import 'components/right-food';
