--- a/restaurant-2/src/sass/components/footer.scss
+++ b/restaurant-2/src/sass/components/footer.scss
@@ -16,7 +16,7 @@
     text-align: center;
 }
 
-h2 {
+.footer-txt {
     
     margin: 0 auto;
     font-size: 21px;
@@ -28,7 +28,7 @@ h2 {
     }
 }
 
-p {
+.footer-txt-p{
     margin: 0 0 10px 0;
     font-size: 16px;
 }
