--- a/restaurant-2/src/sass/styles.scss
+++ b/restaurant-2/src/sass/styles.scss
@@ -7,4 +7,5 @@
 @import './helpers/typography';
 @import 'components/header';
 @import 'components/right-food';
+@import 'components/fine-ingredients';
 @import 'components/footer';
