--- a/restaurant-2/src/sass/components/footer.scss
+++ b/restaurant-2/src/sass/components/footer.scss
@@ -21,6 +21,8 @@
     margin: 0 auto;
     font-size: 21px;
     font-family: 'Yeseva One';
+    font-style: normal;
+    font-weight: 400;
 
     &::after {
         display: block;
@@ -33,6 +35,8 @@
     margin: 0 0 10px 0;
     font-size: 16px;
     font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
     
 }
 
