--- a/restaurant-2/src/sass/components/guest-reviews.scss
+++ b/restaurant-2/src/sass/components/guest-reviews.scss
@@ -10,7 +10,7 @@
   text-align: center;
   padding: 80px 60px 105px 60px;
   color: #ffffff;
-  background-color: rgba(0, 0, 0, .8);
+  background-color: rgba(0, 0, 0, 0.6);
   width: 770px;
 
 }
