updates with menu. special items have to be reviewed and done. Menu items position to be changed

--- a/restaurant-2/src/sass/styles.scss
+++ b/restaurant-2/src/sass/styles.scss
@@ -8,6 +8,7 @@
 @import 'components/header';
 @import 'components/right-food';
 @import 'components/fine-ingredients';
+@import 'components/menu';
 @import 'components/guest-reviews';
 @import 'components/just-the-rigth-food';
 @import 'components/footer';
