menu items are ready

--- a/restaurant-2/src/sass/components/menu.scss
+++ b/restaurant-2/src/sass/components/menu.scss
@@ -4,28 +4,53 @@
     background-position: center;
 }
 
-// .menu_items_main{
-//     display: flex;
-//     flex-flow: row wrap;
-//     justify-content: space-between;
-//     align-items: center;
-// }
-.menu_items_second{
+.menu_items_main{
     display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
+    flex-flow: row;
+    justify-content: space-around;
+    align-items: center;
     padding: 100px;
 }
 
-.menu_items_positions{
+.menu_items_first{
     display: flex;
-    flex-flow: column wrap;
-    border: 1px solid red;
-    height: fit-content;
+    flex-flow: column;
+}
+.menu_items_second{
+    display: flex;
+    flex-flow: column;
 }
 
+.special-offer{
+    position: relative;
+    &::after{
+    content: '';
+    display: block;
+    position: absolute;
+    left: -15px;
+    top: 8px;
+    width: 455px;
+    height: 82px;
+    border: 1px solid #cc9900;
+}
+&::before{
+    content: 'Special';
+    display:block;
+    text-align: center;
+    color: #fff;
+    background-color: #d6ba6a;
+    height: 22px;
+    width: 70px;
+    position: absolute;
+    left: 372px;
+    top: -14px;
+
+}
+}
+
+
 .menu-item-self{
-    width: 430px;
+    max-width: 430px;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;  
@@ -70,7 +95,7 @@
     padding: 10px 0 10px 0;
     &::before{
         content: '';
-        width: 430px;
+        max-width: 430px;
         background-color: #cc99004f;
         height: 1px;
         display: flex;
