--- a/restaurant-2/src/sass/components/guest-reviews.scss
+++ b/restaurant-2/src/sass/components/guest-reviews.scss
@@ -11,7 +11,7 @@
   padding: 80px 60px 105px 60px;
   color: #ffffff;
   background-color: rgba(0, 0, 0, .8);
-  width: 770px;
+  max-width: 770px;
 
 }
 
