--- a/restaurant-2/src/sass/components/just-the-rigth-food.scss
+++ b/restaurant-2/src/sass/components/just-the-rigth-food.scss
@@ -13,6 +13,14 @@
   justify-content: space-around;
   align-content: center;
 }
+@media screen and (min-width: 320px) and (max-width: 999px) {
+  .just-tr-food {
+      flex-flow: column;
+      justify-content: center;
+      padding-top: 50px;
+  padding-bottom: 50px;
+  }
+}
 
 .just-tr-food_photos {
   display: flex;
@@ -20,9 +28,10 @@
   justify-content: center;
 }
 
+
 .just-tr-food_photo {
-  width: 270px;
-  height: 507px;
+  max-width: 270px;
+  max-height: 507px;
   margin: 0 15px 0 15px;
 
   &:last-of-type {
@@ -30,9 +39,29 @@
   }
 }
 
+@media screen and (min-width: 320px) and (max-width: 999px) {
+  .just-tr-food_photo {
+    margin-bottom: 0;
+  }
+  .just-tr-food_photo:last-of-type{
+    margin-right: 10px;
+  }
+}
+
 .just-tr-food_txt {
+  display: block;
   text-align: center;
   max-width: 430px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 999px) {
+  .just-tr-food_txt {
+    padding-top: 20px;
+    margin: 0 auto;
+    flex-flow: column;
+      justify-content: center;
+      align-content: center;
+  }
 }
 
 .just-tr-food_txt_title {
@@ -64,6 +93,11 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
+}
+@media screen and (min-width: 320px) and (max-width: 999px) {
+  .inputs_item {
+    padding-top: 20px;
+  }
 }
 
 .form-txt {
@@ -127,6 +161,11 @@
   font-style: italic;
   background-color: rgba(256, 256, 256, .6);
 }
+@media screen and (min-width: 320px) and (max-width: 999px) {
+  .select {
+    margin-bottom: 30px;
+  }
+}
 
 .form-button {
   font-family: 'Open Sans';
@@ -134,4 +173,9 @@
   color: #fff;
   padding: 12px 60px 12px 55px;
   background-color: #cc9900;
+}
+@media screen and (min-width: 320px) and (max-width: 999px) {
+  .form-button{
+    padding: 12px 60px 12px 55px;
+  }
 }
