--- a/restaurant-2/src/sass/components/header.scss
+++ b/restaurant-2/src/sass/components/header.scss
@@ -1,4 +1,4 @@
-.header-logo-nav {
+.header-logo-nav{
   display: flex;
   flex-flow: wrap;
   justify-content: space-between;
@@ -7,116 +7,84 @@
   padding: 20px 0 20px 0;
 }
 
-.header-section {
+.header-section{
   background: url("../images/header-background.png");
   background-size: cover;
   background-position: center;
 }
 
-.logo-img {
+.logo-img{
   display: block;
   height: 90px;
   width: 150px;
   // background-color: black;
 }
 
-.header-nav {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-  width: 910px;
-
+.header-nav{
+ display: flex;
+ flex-flow: row wrap;
+ justify-content: space-between;
+ width: 910px;
+ 
 }
 
 .nav__links{
-    text-decoration: none;
-    text-transform: capitalize;
-    color: #fff;
-    font-family: 'Gentium Book Basic';
-     font-style: normal;
-     font-weight: 700;
-     font-size: 21px;
-     position: relative;
-    &:hover{
-        color: #dab33e;
-        transition: all .5s linear;
-        text-shadow: -1px 0 rgba(0, 0, 0, 0.5), 0 1px rgba(0, 0, 0, 0.5), 1px 0 rgba(0, 0, 0, 0.5), 0 -1px rgba(0, 0, 0, 0.5);
-    }
-}
-
-@media screen and (min-width: 320px) and (max-width: 999px) {
-  .header-txt-btn {
-    flex-flow: column;
-  }
-}
-
-.header-title {
-  font-size: 90px;
+  text-decoration: none;
+  text-transform: uppercase;
   color: #fff;
-  max-width: 970px;
-
-  &::after {
-    content: url('../images/header-divider.png');
-    display: block;
-    padding: 0 auto;
-    margin: 0 auto;
-    width: 230px;
-    height: 43px;
-    // margin-bottom: 30px;
+  &:hover{
+      color: #dab33e;
+      transition: all .5s linear;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 700px) {
-  .header-title {
-    font-size: 40px;
+.header-svg{
+  display: block;
+  height: 20px;
+  width: 20px;
+  fill: #dab33e;
+  &:hover{
+      fill: #ffffff;
+      transition: all .5s linear;
   }
+}
 
-  .header-nav {
-    flex-flow: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    font-weight: 700
-  }
-.header-logo-nav {
-    justify-content: center;
-    align-items: center;
+.header-txt-btn{
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  padding-top: 97px;
+  padding-bottom: 97px;
+  text-align: center;
 }
 
 .header-title{
-    font-size: 90px;
-    color: #fff;
-    width: 970px;
-    font-family: 'Yeseva One';
-     font-style: normal;
-     font-weight: 400;
-    &::after{
-        content: url('../images/header-divider.png');
-        display: block;
-        padding: 0 auto;
-        margin: 0 auto;
-        width: 230px;
-        height: 43px;
-        // margin-bottom: 30px;
-    }
-}
-
-  .header-btn {
-    width: 230px;
-    height: 56px;
-    margin: 30px 0 30px 0;
-    color: #fff;
-    text-transform: uppercase;
-    border: 1px solid #fff;
-    background-color: rgba(255, 255, 255, 0.247);
-    font-size: 18px;
-    font-family: 'Lato';
-     font-style: normal;
-     font-weight: 400;
-    &:hover{
-        border: 1px solid #000;
-        background-color: rgba(0, 0, 0, 0.247);
-        cursor: pointer;
-        transition: all .5s linear;
-    }
+  font-size: 90px;
+  color: #fff;
+  width: 970px;
+  &::after{
+      content: url('../images/header-divider.png');
+      display: block;
+      padding: 0 auto;
+      margin: 0 auto;
+      width: 230px;
+      height: 43px;
+      // margin-bottom: 30px;
   }
+}
+.header-btn{
+  width: 230px;
+  height: 56px;
+  margin: 30px 0 30px 0;
+  color: #fff;
+  text-transform: uppercase;
+  border: 1px solid #fff;
+  background-color: rgba(255, 255, 255, 0.247);
+  &:hover{
+      border: 1px solid #000;
+      background-color: rgba(0, 0, 0, 0.247);
+      cursor: pointer;
+      transition: all .5s linear;
+  }
+}
