--- a/restaurant-2/src/sass/components/header.scss
+++ b/restaurant-2/src/sass/components/header.scss
@@ -35,6 +35,7 @@
   &:hover{
       color: #dab33e;
       transition: all .5s linear;
+      text-shadow: 1px 1px #00000088;
   }
 }
 
@@ -86,5 +87,90 @@
       background-color: rgba(0, 0, 0, 0.247);
       cursor: pointer;
       transition: all .5s linear;
+  }
+}
+.header-media-nav{
+  display: none;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px){
+.nav__links{
+  display: none;
+}
+.header-media-nav{
+  display: flex;
+  width: 80px;
+  height: 80px;
+}
+.svg-media-header{
+  fill: #fff;
+  &:hover{
+    fill: #dab33e;
+  transition: all .5s linear;}
+}
+
+.logo{
+  display: flex;
+  margin: 0 auto;
+  padding-top: 40px;
+  align-items: flex-end;
+}
+.logo-img{
+  width: auto;
+  height: 180px;
+}
+.header-txt-btn{
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+.header-title{
+  display: flex;
+  flex-flow: column;
+  width: 100%;
+  text-align: center;
+  font-size: 50px;
+  margin: 0;
+  }
+  .header-buttons{
+    position: absolute;
+    top: 0;
+    right: 10px;
+    display: flex;
+  }
+  .header-btn{
+  width: 100px;
+  height: 56px;
+  margin-left: 20px;
+  }
+
+}
+@media screen and (min-width: 768px) and (max-width: 1024px){
+  .header-nav{
+    display: flex;
+    flex-flow: row wrap;
+    max-width: 300px;
+    justify-content: space-between;
+  }
+  .nav__links{
+    font-size: 20px;
+  }
+  .header-logo-nav{
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    // align-items: center;
+    padding: 50px;
+  }
+  .header-txt-btn{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .header-title{
+    width: 100%;
   }
 }
