fixed paddinds, menu, fonts

--- a/restaurant-2/src/sass/components/guest-reviews.scss
+++ b/restaurant-2/src/sass/components/guest-reviews.scss
@@ -27,7 +27,7 @@
 }
 
 .guest-rew_p {
-  font-family: 'Gentium Book Basic';
+  font-family: 'Gentium Book';
   font-weight: 400;
   font-size: 25px;
   max-width: 620px;
