--- a/restaurant-2/src/sass/components/right-food.scss
+++ b/restaurant-2/src/sass/components/right-food.scss
@@ -51,7 +51,9 @@
 }
 
 .right-food-image {
-   width: 560px;
+  
+  width: 560px;
+
 }
 
 .right-food-items {
@@ -66,7 +68,7 @@
 @media screen and (min-width: 320px) and (max-width:1199px) {
   
   .right-food-chef {
-   margin: 0 auto;
+   margin: 20px auto;
    padding: 0;
 
   }
@@ -83,8 +85,7 @@
   .rigth-food-txt-section {
     width: auto;
     margin: 0 auto;
-    padding-top:0;
-    padding-bottom: 0;
+    padding: 0;
   }
 
   
