--- a/restaurant-2/src/sass/components/menu.scss
+++ b/restaurant-2/src/sass/components/menu.scss
@@ -9,11 +9,11 @@
   flex-flow: row;
   justify-content: space-around;
   align-items: center;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 1199px) {
+@media screen and (max-width: 991px)  {
   .menu_items_main {
     flex-flow: column;
     padding: 15px 2px 15px 2px;
