--- a/restaurant-2/src/sass/components/header.scss
+++ b/restaurant-2/src/sass/components/header.scss
@@ -97,8 +97,14 @@
 .nav__links{
   display: none;
 }
+.media-nav-header{
+  position: relative;
+}
 .header-media-nav{
   display: flex;
+  position: absolute;
+  top: 2.5%;
+  left: 0;  
   width: 80px;
   height: 80px;
 }
@@ -112,12 +118,12 @@
 .logo{
   display: flex;
   margin: 0 auto;
-  padding-top: 40px;
+  padding-top: 150px;
   align-items: flex-end;
 }
 .logo-img{
   width: auto;
-  height: 180px;
+  height: 170px;
 }
 .header-txt-btn{
   display: flex;
@@ -129,7 +135,7 @@
 .header-title{
   display: flex;
   flex-flow: column;
-  width: 100%;
+  width: 80%;
   text-align: center;
   font-size: 50px;
   margin: 0;
@@ -139,38 +145,93 @@
     top: 0;
     right: 10px;
     display: flex;
+    // justify-items:flex-end;
   }
   .header-btn{
   width: 100px;
   height: 56px;
-  margin-left: 20px;
+  margin-left: 15px;
   }
 
 }
-@media screen and (min-width: 768px) and (max-width: 1024px){
-  .header-nav{
-    display: flex;
-    flex-flow: row wrap;
-    max-width: 300px;
-    justify-content: space-between;
-  }
+@media screen and (min-width: 768px) and (max-width: 1023px){
   .nav__links{
-    font-size: 20px;
+    display: none;
   }
-  .header-logo-nav{
+  .media-nav-header{
+    position: relative;
+  }
+  .header-media-nav{
     display: flex;
-    flex-flow: row;
-    justify-content: space-between;
-    // align-items: center;
-    padding: 50px;
+    position: absolute;
+    top: 2%;
+    left: 0;  
+    width: 80px;
+    height: 80px;
+    
+  }
+  .svg-media-header{
+    fill: #fff;
+    &:hover{
+      fill: #dab33e;
+    transition: all .5s linear;
+  cursor: pointer;}
+  }
+  
+  .logo{
+    display: flex;
+    margin: 0 auto;
+    padding-top: 150px;
+    align-items: flex-end;
+  }
+  .logo-img{
+    width: auto;
+    height: 180px;
   }
   .header-txt-btn{
     display: flex;
     flex-flow: column;
     justify-content: center;
     align-items: center;
+    margin: 0;
   }
   .header-title{
-    width: 100%;
-  }
+    display: flex;
+    flex-flow: column;
+    width: 60%;
+    text-align: center;
+    font-size: 60px;
+    margin: 0;
+    }
+    .header-buttons{
+      position: absolute;
+      top: 0;
+      right: 10px;
+      display: flex;
+    }
+    .header-btn{
+    width: 200px;
+    height: 56px;
+    margin-left: 20px;
+    }
+  
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1400px){
+
+  .header-nav{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    width: 800px;
+    
+   }
+   .header-title{
+    display: flex;
+    flex-flow: column;
+    width: 50%;
+    text-align: center;
+    font-size: 50px;
+    margin: 0;
+    }
 }
