--- a/restaurant-2/src/sass/helpers/basic.scss
+++ b/restaurant-2/src/sass/helpers/basic.scss
@@ -17,3 +17,11 @@ img{
     padding: 0 auto;
 }
 
+
+
+
+  @media screen and (min-width:768px) and (max-width: 1199px){
+    .container{
+        max-width: 960px;
+      }
+        }
