update just-the-right-food, font-size - 20px

--- a/restaurant-2/src/sass/components/menu.scss
+++ b/restaurant-2/src/sass/components/menu.scss
@@ -18,6 +18,9 @@
     flex-flow: column;
     padding: 15px 2px 15px 2px;
   }
+  .menu-description {
+    font-size: 20px;
+  }
 }
 
 // @media screen and (min-width: 1200px) {
