--- a/restaurant-2/src/sass/components/just-the-rigth-food.scss
+++ b/restaurant-2/src/sass/components/just-the-rigth-food.scss
@@ -13,12 +13,13 @@
   justify-content: space-around;
   align-content: center;
 }
+
 @media screen and (min-width: 320px) and (max-width: 999px) {
   .just-tr-food {
-      flex-flow: column;
-      justify-content: center;
-      padding-top: 30px;
-  padding-bottom: 30px;
+    flex-flow: column;
+    justify-content: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 }
 
@@ -43,7 +44,8 @@
   .just-tr-food_photo {
     margin-bottom: 0;
   }
-  .just-tr-food_photo:last-of-type{
+
+  .just-tr-food_photo:last-of-type {
     margin-right: 10px;
   }
 }
@@ -54,13 +56,13 @@
   max-width: 430px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 991px) {
+@media screen and (min-width: 320px) and (max-width: 999px) {
   .just-tr-food_txt {
     padding: 20px 10px 0 5px;
     margin: 0 auto;
     flex-flow: column;
-      justify-content: center;
-      align-content: center;
+    justify-content: center;
+    align-content: center;
   }
 }
 
@@ -94,6 +96,7 @@
   flex-flow: row wrap;
   justify-content: space-around;
 }
+
 @media screen and (min-width: 320px) and (max-width: 999px) {
   .inputs_item {
     padding-top: 20px;
@@ -119,6 +122,7 @@
 
 .label-for-data {
   position: relative;
+
   &::before {
     display: block;
     content: url("../images/icon.png");
@@ -161,27 +165,90 @@
   font-style: italic;
   background-color: rgba(256, 256, 256, .6);
 }
-@media screen and (min-width: 320px) and (max-width: 999px) {
-  .select {
-    margin-bottom: 30px;
-  }
-}
+
+// @media screen and (min-width: 320px) and (max-width: 999px) {
+//   .select {
+//     margin-bottom: 30px;
+//   }
+
+//   .just-tr-food_txt_p {
+//     font-size: 20px;
+//   }
+// }
 
 .form-button {
   font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
+  font-weight: 800;
+  font-size: 16px;
   color: #fff;
   padding: 12px 60px 12px 55px;
   background-color: #cc9900;
-  &:hover{
+
+  &:hover {
     cursor: pointer;
     background-color: #ac8513;
     transition: all .5s linear;
   }
 }
-@media screen and (min-width: 320px) and (max-width: 999px) {
-  .form-button{
-    padding: 12px 60px 12px 55px;
+@media screen and (min-width: 424px) and (max-width: 999px) {
+  .select {
+    width: 410px;
+    height: 60px;
+    background-position-x: 380px;
+  }
+  .form-button {
+    padding: 30px 120px 30px 120px;
+  }
+  .form-txt {
+    width: 410px;
+    height: 60px;
+
+    &::placeholder {
+      font-size: 20px;
+      padding-left: 15px;
+    }
   }
 }
+@media screen and (min-width: 765px) and (max-width: 999px) {
+  .select {
+    width: 400px;
+    height: 70px;
+    background-position-x: 380px;
+  }
+  .form-button {
+    padding: 30px 150px 30px 150px;
+  }
+  .form-txt {
+    width: 700px;
+    height: 60px;
+
+    &::placeholder {
+      font-size: 20px;
+      padding-left: 15px;
+    }
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 999px) {
+  .form-button {
+    padding: 30px 100px 30px 100px;
+    font-size: 20px;
+  }
+
+  .form-txt {
+    width: 300px;
+    height: 50px;
+
+    &::placeholder {
+      font-size: 20px;
+      padding-left: 15px;
+    }
+  }
+  .select {
+    width: 300px;
+    height: 50px;
+    background-position-x: 275px;
+     margin-bottom: 30px;
+  }
+}
+
