fixed forms, 20px - font-size fot everyone

--- a/restaurant-2/src/sass/components/just-the-rigth-food.scss
+++ b/restaurant-2/src/sass/components/just-the-rigth-food.scss
@@ -211,9 +211,12 @@
 }
 @media screen and (min-width: 765px) and (max-width: 999px) {
   .select {
-    width: 400px;
+    width: 700px;
     height: 70px;
-    background-position-x: 380px;
+    background-position-x: 680px;
+    padding: 10px;
+    font-size: 20px;
+
   }
   .form-button {
     padding: 30px 150px 30px 150px;
