--- a/restaurant-2/src/sass/components/footer.scss
+++ b/restaurant-2/src/sass/components/footer.scss
@@ -21,7 +21,10 @@
         margin-bottom: 20px;
     }
     .footer-content {
-        font-size: 22px;
+        font-size: 20px;
+    }
+    .footer-txt-p {
+        font-size: 20px;
     }
 }
 
