--- a/restaurant-2/src/sass/components/right-food.scss
+++ b/restaurant-2/src/sass/components/right-food.scss
@@ -96,6 +96,9 @@
      margin: 0 auto;
      padding: 20px 0 20px 0;
   }
+  .right-food-txt {
+    font-size: 20px;
+  }
 }
 
 @media screen and (min-width:768px) and (max-width: 1023px){
@@ -139,6 +142,9 @@
           content: url('../images/the-rf-divider.png');
           padding-bottom: 50px;
         }
+      }
+      .right-food-txt {
+        font-size: 20px;
       }
      
         }
