--- a/restaurant-2/src/sass/components/footer.scss
+++ b/restaurant-2/src/sass/components/footer.scss
@@ -1,89 +1,85 @@
 .footer-section {
-    padding-top: 52px;
-    padding-bottom: 50px;
-    background-color: #191919;
+  padding-top: 52px;
+  padding-bottom: 50px;
+  background-color: #191919;
 }
 
 .footer-content {
-    display: flex;
-    flex-flow: row;
-    justify-content: space-around;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-around;
 }
 
-@media screen and (min-width: 320px) and (max-width: 845px) {
-    .footer-content {
-      max-width: 0 auto;
-        flex-flow: column;
-        justify-items: center;
-        align-items: center;
-    }
-    .icons-items {
-        margin-bottom: 20px;
-    }
-    .footer-content {
-        font-size: 20px;
-    }
-    .footer-txt-p {
-        font-size: 20px;
-    }
+.footer-txt-p {
+  margin: 0 0 10px 0;
+  font-size: 16px;
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
 }
 
-.descr {
-    color: #fefefe;
-    max-width: 320px;
-    text-align: center;
+.icons-items {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
 }
-
-.footer-txt {
-    
-    margin: 0 auto;
-    font-size: 21px;
-    font-family: 'Yeseva One';
-    font-style: normal;
-    font-weight: 400;
-
-    &::after {
-        display: block;
-        content: url('../images/footer-divider.png');
-        margin: 10px;
-    }
-}
-
-.footer-txt-p{
-    margin: 0 0 10px 0;
-    font-size: 16px;
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 400;
-    
-}
-
-.icons-items{
-display: flex;
-flex-flow: row;
-justify-content: center;
-}
-
-
 
 .icon {
-    width: 22px;
-    height: 14px;
-    fill: #ffffff;
+  width: 22px;
+  height: 14px;
+  fill: #ffffff;
 }
 
-
-   
 .link {
-    
-    &:hover {
-        fill:#cc9900;
-        transition: all .5s linear;
-    }
+  &:hover {
+    fill: #cc9900;
+    transition: all 0.5s linear;
+  }
 }
 
 .link1 {
-    text-decoration: none;
+  text-decoration: none;
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .footer-content {
+    max-width: 90%;
+    flex-flow: column;
+    justify-items: center;
+    align-items: center;
+  }
+  .icons-items {
+    margin-bottom: 20px;
+  }
+  .footer-content {
+    font-size: 20px;
+  }
+  .footer-txt-p {
+    font-size: 20px;
+  }
 }
 
+.descr {
+  color: #fefefe;
+  max-width: 320px;
+  text-align: center;
+}
 
+.footer-txt {
+  margin: 0 auto;
+  font-size: 21px;
+  font-family: 'Yeseva One';
+  font-style: normal;
+  font-weight: 400;
+
+  &::after {
+    display: block;
+    content: url('../images/footer-divider.png');
+    margin: 10px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px){
+    .footer-content{
+        max-width: 90%;
+    }
+}
