--- a/restaurant-2/src/sass/components/right-food.scss
+++ b/restaurant-2/src/sass/components/right-food.scss
@@ -81,7 +81,7 @@
   }
 
   .rigth-food-txt-section {
-    width: auto;
+    width: 90%;
     margin: 0 auto;
     padding-top:0;
     padding-bottom: 0;
