--- a/restaurant-2/src/sass/components/guest-reviews.scss
+++ b/restaurant-2/src/sass/components/guest-reviews.scss
@@ -7,8 +7,10 @@
 }
 
 .guest-rew-words {
+  display: block;
+  padding: 0 auto;
+  margin: 0 auto;
   text-align: center;
-  padding: 80px 60px 105px 60px;
   color: #ffffff;
   background-color: rgba(0, 0, 0, 0.6);
   max-width: 770px;
