--- a/restaurant-2/src/sass/components/fine-ingredients.scss
+++ b/restaurant-2/src/sass/components/fine-ingredients.scss
@@ -1,5 +1,5 @@
 .fine-ingredients-section {
-  background: url('../images/background-fine-ingredients.png');
+  background: url('/images/background-fine-ingredients.png');
   background-size: cover;
   background-position: center;
 }
