--- a/restaurant-2/src/sass/components/guest-reviews.scss
+++ b/restaurant-2/src/sass/components/guest-reviews.scss
@@ -23,7 +23,7 @@
 
   &::after {
     display: block;
-    content: url('../images/footer-divider.png');
+    content: url('/images/footer-divider.png');
     margin: 10px;
   }
 }
