--- a/restaurant-2/src/sass/components/footer.scss
+++ b/restaurant-2/src/sass/components/footer.scss
@@ -73,7 +73,7 @@
 
   &::after {
     display: block;
-    content: url('../images/footer-divider.png');
+    content: url('/images/footer-divider.png');
     margin: 10px;
   }
 }
