--- a/restaurant-2/src/sass/components/header.scss
+++ b/restaurant-2/src/sass/components/header.scss
@@ -8,7 +8,7 @@
 }
 
 .header-section{
-  background: url("../images/header-background.png");
+  background: url("/images/header-background.png");
   background-size: cover;
   background-position: center;
 }
@@ -65,7 +65,7 @@
   color: #fff;
   width: 970px;
   &::after{
-      content: url('../images/header-divider.png');
+      content: url('/images/header-divider.png');
       display: block;
       padding: 0 auto;
       margin: 0 auto;
