--- a/restaurant-2/src/sass/components/just-the-rigth-food.scss
+++ b/restaurant-2/src/sass/components/just-the-rigth-food.scss
@@ -1,5 +1,5 @@
 .just-tr-food-section {
-  background: url('/images/background-right-food.png');
+  background: url('../images/background-right-food.png');
   background-size: cover;
   background-position: center;
 }
@@ -37,7 +37,7 @@
 
   &::after {
     display: block;
-    content: url('/images/the-rf-divider.png');
+    content: url('../images/the-rf-divider.png');
     margin: 10px;
   }
 }
@@ -80,7 +80,7 @@
 
   &::before {
     display: block;
-    content: url('/images/icon.png');
+    content: url('../images../icon.png');
     position: absolute;
     right: 0.8rem;
     top: 50%;
@@ -105,7 +105,7 @@
   padding: 5px;
   font-size: 16px;
   border: 1px solid #c8c6c6;
-  background: url('/images/arrow.png') no-repeat right;
+  background: url('../images/arrow.png') no-repeat right;
   background-position-x: 180px;
   font-family: 'Open Sans';
   font-weight: 400;
