--- a/restaurant-2/src/sass/helpers/typography.scss
+++ b/restaurant-2/src/sass/helpers/typography.scss
@@ -3,14 +3,14 @@
      font-family: 'Gentium Book Basic';
      font-style: normal;
      font-weight: 400;
-     src: url('../../fonts/gentium-book/gentium-book-basic-v9-latin-regular.woff');
+     src: url('../fonts/gentium-book/gentium-book-basic-v9-latin-regular.woff');
    }
 
    @font-face {
      font-family: 'Gentium Book Basic';
      font-style: normal;
      font-weight: 700;
-     src: url('../../fonts/gentium-book/gentium-book-basic-v9-latin-700.woff');
+     src: url('../fonts/gentium-book/gentium-book-basic-v9-latin-700.woff');
    }
 
    /* lato-regular - latin */
@@ -18,7 +18,7 @@
      font-family: 'Lato';
      font-style: normal;
      font-weight: 400;
-     src: url('../../fonts/lato/lato-v15-latin-regular.woff');
+     src: url('../fonts/lato/lato-v15-latin-regular.woff');
    }
 
    /* lato-italic - latin */
@@ -26,7 +26,7 @@
      font-family: 'Lato';
      font-style: italic;
      font-weight: 400;
-     src: url('../../fonts/lato/lato-v15-latin-italic.woff');
+     src: url('../fonts/lato/lato-v15-latin-italic.woff');
    }
 
    /* open-sans-regular - latin */
@@ -34,7 +34,7 @@
      font-family: 'Open Sans';
      font-style: normal;
      font-weight: 400;
-     src: url('../../fonts/open-sans/open-sans-v16-latin-regular.woff');
+     src: url('../fonts/open-sans/open-sans-v16-latin-regular.woff');
    }
 
    /* open-sans-italic - latin */
@@ -42,7 +42,7 @@
      font-family: 'Open Sans';
      font-style: italic;
      font-weight: 400;
-     src: url('../../fonts/open-sans/open-sans-v16-latin-italic.woff');
+     src: url('../fonts/open-sans/open-sans-v16-latin-italic.woff');
    }
 
    /* open-sans-700 - latin */
@@ -50,7 +50,7 @@
      font-family: 'Open Sans';
      font-style: normal;
      font-weight: 700;
-     src: url('../../fonts/open-sans/open-sans-v16-latin-700.woff');
+     src: url('../fonts/open-sans/open-sans-v16-latin-700.woff');
    }
 
    /* open-sans-700italic - latin */
@@ -58,7 +58,7 @@
      font-family: 'Open Sans';
      font-style: italic;
      font-weight: 700;
-     src: url('../../fonts/open-sans/open-sans-v16-latin-700italic.woff');
+     src: url('../fonts/open-sans/open-sans-v16-latin-700italic.woff');
    }
 
    /* roboto-regular - latin */
@@ -66,7 +66,7 @@
      font-family: 'Roboto';
      font-style: normal;
      font-weight: 400;
-     src: url('../../fonts/roboto/roboto-v19-latin-regular.woff');
+     src: url('../fonts/roboto/roboto-v19-latin-regular.woff');
    }
 
    /* roboto-700 - latin */
@@ -74,7 +74,7 @@
      font-family: 'Roboto';
      font-style: normal;
      font-weight: 700;
-     src: url('../../fonts/roboto/roboto-v19-latin-700.woff');
+     src: url('../fonts/roboto/roboto-v19-latin-700.woff');
    }
 
    /* yeseva-one-regular - latin */
@@ -82,5 +82,5 @@
      font-family: 'Yeseva One';
      font-style: normal;
      font-weight: 400;
-     src: url('../../fonts/yeseva-one/yeseva-one-v13-latin-regular.woff');
+     src: url('../fonts/yeseva-one/yeseva-one-v13-latin-regular.woff');
    }
